[package]
name = "octa-force"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "0.11.2"
glam = { version = "0.27.0", features = ["serde", "mint"] }
anyhow = "1.0"

fps_clock = "2.0"
winit = { version = "0.29", default-features = false, features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"]}
ash = { version = "0.37", features = ["linked"] }
ash-window = "0.12"
raw-window-handle = "0.5"
gpu-allocator = { version = "0.26", default-features = false, features = ["vulkan"] }

egui = "0.28"
egui_plot = "0.28"
egui-winit = "0.28"

# Forked for BGR-Texture Format support
egui-ash-renderer = { git="https://github.com/MaartenBehn/egui-ash-renderer.git", version = "0.5.0", features = ["gpu-allocator", "dynamic-rendering"]}
# egui-ash-renderer = { path="../egui-ash-renderer", features = ["gpu-allocator", "dynamic-rendering"]}
egui_extras = { version = "0.28", default-features = false, features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }

puffin_egui = "0.29"
serde_json = "1.0.132"

[build-dependencies]
ash = { version = "0.37", features = ["linked"] }