[package]
name = "octa-force"
version = "0.3.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(vulkan_1_0)', 'cfg(vulkan_1_1)', 'cfg(vulkan_1_2)', 'cfg(vulkan_1_3)'] }

[dependencies]
log = "0.4"
simplelog = "0.11.2"
glam = { version = "0.27.0", features = ["serde", "mint"] }
anyhow = "1.0"

fps_clock = "2.0"
winit = { version = "0.30", default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"]}
ash = { version = "0.38", features = ["linked"] }
ash-window = "0.13"
raw-window-handle = "0.6"
gpu-allocator = { version = "0.27", default-features = false, features = ["vulkan"] }

egui = "0.30"
egui_plot = "0.30"
egui-winit = "0.30"
# Forked for BGR-Texture Format support
#egui-ash-renderer = { path="../egui-ash-renderer", features = ["gpu-allocator", "dynamic-rendering"]}
egui-ash-renderer = { git="https://github.com/MaartenBehn/egui-ash-renderer.git", version = "0.8.0", features = ["gpu-allocator", "dynamic-rendering"]}
egui_extras = { version = "0.30", default-features = false, features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }

# puffin_egui = { path="../puffin/puffin_egui" }
puffin_egui = { git="https://github.com/MaartenBehn/puffin", version="0.29" }
serde_json = "^1"

# For hot reloading
libloading = "^0.8"
notify = "8"
notify-debouncer-full = "0.5.0"
crc32fast = "1.3.2"

# Converting device features
convert_case = "0.8.0"

[build-dependencies]
ash = { version = "0.38", features = ["linked"] }
